Add new button for bottom of page and header and footer to game page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 text-align: center; /* Centers text and inline elements horizontally within the section */
                 margin: 150px auto; /* Centers the section container itself within the page */
                 padding: 20px; /* Adds padding around the section content for spacing */
+                height: 100vh;
             }
 
             .container-wrapper {
@@ -148,7 +149,9 @@
             </div>
             <p id="challenge-text">Challenge yourself further and adjust the speed of the game in <a class="in-text-link" href="/settings.html">settings</a>.</p>
             </div>
+            <a class="cta-button" href="">Top Page</a>
         </section>
+        
         
         <footer>
             <div class="social-icons">
