Update variables for game logic

--- a/game.html
+++ b/game.html
@@ -106,8 +106,8 @@
                 <h2>Mulitplier:<br>2x </h2>
             </div>
             <div class="game-container">
-                <div id="player-score">
-                    <h1>Score: </h1>
+                <div>
+                    <h1 id="score">Score: </h1>
                 </div>
                 <div class="button-container">
                     <div class="pattern-button" id="btn1"></div>
@@ -117,8 +117,8 @@
                 </div>
                 <div class="controls">
                     <button class="cta-button" id="start-game">Start Game</button>
-                    <button class="cta-button" id="start-game">End Game</button>
-                    <div id="message">Press Start to begin!</div>
+                    <button class="cta-button" id="end-game">End Game</button>
+                    <div id="startMessage">Press Start to begin!</div>
                 </div>
             </div>
         </div>
