Resolved final score issue

--- a/game.html
+++ b/game.html
@@ -107,7 +107,7 @@
             </div>
             <div class="game-container">
                 <div>
-                    <h1 id="score">Score: </h1>
+                    <h1 id="score"></h1>
                 </div>
                 <div class="button-container">
                     <div class="pattern-button" id="btn1"></div>
@@ -118,7 +118,10 @@
                 <div class="controls">
                     <button class="cta-button" id="start-game">Start Game</button>
                     <button class="cta-button" id="end-game">End Game</button>
-                    <div id="startMessage">Press Start to begin!</div>
+                    <div>
+                        <h1 id="startMessage"></h1>
+                        <h1 id="endMessage"></h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -165,7 +168,7 @@
 
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook"></a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
                 <a href="https://www.twitter.com" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
                 <a href="https://www.instagram.com" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
                 <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
