--- a/game.html
+++ b/game.html
@@ -90,11 +90,11 @@
             <a class="website-logo-header" href="index.html"><img src="./human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="#instructions-section">How To Play</a></li>
-                    <li><a href="#difficulty-section">Difficulty</a></li>
-                    <li><a href="">Leaderboard</a></li>
-                    <li><a href="">Settings</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html#instructions-section">How To Play</a></li>
+                    <li><a href="./index.html#difficulty-section">Difficulty</a></li>
+                    <li><a href="./leaderboards.html">Leaderboard</a></li>
+                    <li><a href="./settings.html">Settings</a></li>
                 </ul>
             </nav>
         </header>
