Finished other levels added other difficulties styling and logic. Styling to be added to main CSS file

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             </p>
             <div class="difficulty-card-container">
                 <div class="difficulty-cards">
-                    <a class="cta-button" href="">Easy</a>
+                    <a class="cta-button" href="./game.html">Easy</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a class="cta-button" href="">Medium</a>
+                    <a class="cta-button" href="./medium-game.html">Medium</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a class="cta-button" href="">Hard</a>
+                    <a class="cta-button" href="./hard-game.html">Hard</a>
                 </div>
             </div>
             <p id="challenge-text">Challenge yourself further and adjust the speed of the game in <a class="in-text-link" href="/settings.html">settings</a>.</p>
