--- a/game.html
+++ b/game.html
@@ -6,10 +6,9 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./Styles/styles.css">
         <style>
             
-<<<<<<< HEAD
             .pattern-button.active {
                 opacity: 50%;
             }
@@ -27,8 +26,6 @@
                 height: 150px;
             }
 
-=======
->>>>>>> 557ad774733197380fbf4f937acd832a045e4198
         </style>
     </head>
     <body>
