--- a/medium-game.html
+++ b/medium-game.html
@@ -6,7 +6,7 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./Styles/styles.css">
         <style>
             #btn1 { grid-row: 1; grid-column: 1; background-color: red; }
             #btn2 { grid-row: 1; grid-column: 3; background-color: green; }
