Project now back to working 75% still some code issuse with local storage function and settings transferring to game. File structure has been updated with styling, resources, scripts.

--- a/leaderboards.html
+++ b/leaderboards.html
@@ -6,11 +6,11 @@
         <title>Player Rankings</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./Styles/styles.css">
 </head>
 <body>
     <header>
-        <a class="website-logo-header" href="index.html"><img src="./human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+        <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -47,7 +47,7 @@
             </table>
 
             <!-- Top Page Button -->
-            <a href="#" class="settings-button">Settings</a>
+            <a href="./settings.html" class="settings-button">Settings</a>
             <p>Tip: Aim for Speed and Complexity! <br><br> Adjust your settings to higher difficulties and faster speeds to earn bonus points and rank higher on the leaderboard. Are you up for the challenge? Test your skills, and see how well <i style="color: blueviolet;">Do You Remember!</i></p>
         </div>
         
@@ -66,5 +66,5 @@
     </footer>
 
 </body>
-<script src="./leaderboard.js"></script>
+<script src="./Scripts/leaderboard.js"></script>
 </html>
