--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./Styles/styles.css">
         <style>
             
             .pattern-button.active {
@@ -30,7 +30,7 @@
     </head>
     <body>
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
@@ -114,6 +114,6 @@
             </div>
         </footer>
     </body>
-    <script src="script.js"></script>
-    <script src="./difficulty-select.js"></script>
+    <script src="./Scripts/script.js"></script>
+    <script src="./Scripts/difficulty-select.js"></script>
 </html>
