--- a/settings.html
+++ b/settings.html
@@ -6,11 +6,11 @@
         <title>Game Settings</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./Styles/styles.css">
     </head>
 <body>
     <header>
-        <a class="website-logo-header" href="index.html"><img src="./human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+        <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -60,5 +60,5 @@
         </div>
     </footer>
 </body>
-<script src="settings.js"></script>
+<script src="./Scripts/settings.js"></script>
 </html>
