--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./Styles/styles.css">
+        <link rel="stylesheet" href="../Styles/styles.css">
 
         <style>
 
