Update ref link for settings

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <a class="cta-button" href="./hard-game.html">Hard</a>
                 </div>
             </div>
-            <p id="challenge-text">Challenge yourself further and adjust the speed of the game in <a class="in-text-link" href="/settings.html">settings</a>.</p>
+            <p id="challenge-text">Challenge yourself further and adjust the speed of the game in <a class="in-text-link" href="./settings.html">settings</a>.</p>
             </div>
             <a class="cta-button" href="#title-section">Top Page</a>
         </section>
