--- a/settings.html
+++ b/settings.html
@@ -31,14 +31,14 @@
             <!-- Game Settings -->
             <div class="settings-slider">
                 <!-- Colors Per Turn -->
-                <label for="colors-per-turn">Colours Per Turn:</label>
+                <label for="colors-per-turn" style="color: #9500ff;">Colours Per Turn</label>
                 <input type="range" id="colors-per-turn" min="1" max="7" value="1">
                 <span id="colors-value">1</span>
             </div>
 
             <div class="settings-slider">
                 <!-- Game Speed -->
-                <label for="game-speed">Game Speed:</label>
+                <label for="game-speed" style="color: #9500ff;">Game Speed</label>
                 <input type="range" id="game-speed" min="1" max="3" value="1">
                 <span id="speed-value">1x</span>
             </div>
