Game speed can now be adjusted in the game settings

--- a/game.html
+++ b/game.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="controls">
-                <button class="cta-button" id="start-game">Start Game</button>
+                <button class="cta-game-button" id="start-game">Start Game</button>
                 <h2>Mulitplier:<span id="multiplier"> 1x</span></h2>
                 <div class="player-instructions">
                     <h1 id="endMessage"></h1>
