--- a/settings.html
+++ b/settings.html
@@ -45,7 +45,7 @@
 
             <!-- Save Button -->
             <button class="reset-button" id="save-settings">Save Settings</button>
-            <a href="index.html" class="settings-button">Back to Game</a>
+            <a href="./game.html" class="settings-button">Back to Game</a>
         </div>
     </section>
 
