Remove colours per turn game setting

--- a/settings.html
+++ b/settings.html
@@ -26,21 +26,13 @@
         <div class="container-wrapper">
             <!-- Settings Header -->
             <h1>Game Settings</h1>
-            <p>Customize your experience through the settings menu! <br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> and the <strong style="color: #9500ff;">Number of Colors Per Turn</strong> to match your skill level. Faster speeds and more colors will increase your score multiplier!</p>
-
-            <!-- Game Settings -->
-            <div class="settings-slider">
-                <!-- Colors Per Turn -->
-                <label for="colors-per-turn" style="color: #9500ff;">Colours Per Turn</label>
-                <input type="range" id="colors-per-turn" min="1" max="7" value="1">
-                <span id="colors-value">1</span>
-            </div>
+            <p>Customize your experience through the game settings <strong style="color: #9500ff;">here!</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
 
             <div class="settings-slider">
                 <!-- Game Speed -->
                 <label for="game-speed" style="color: #9500ff;">Game Speed</label>
                 <input type="range" id="game-speed" min="1" max="3" value="1">
-                <span id="speed-value">1x</span>
+                <span id="speed-value">1.0x</span>
             </div>
 
             <!-- Save Button -->
