Score multiplier now works in conjucture with user score

--- a/game.html
+++ b/game.html
@@ -94,7 +94,7 @@
 
             <div class="controls">
                 <button class="cta-game-button" id="start-game">Start Game</button>
-                <h2>Mulitplier:<span id="multiplier"> 1x</span></h2>
+                <h2>Mulitplier: <span id="multiplier"></span></h2>
                 <div class="player-instructions">
                     <h1 id="endMessage"></h1>
                 </div>
