Added media queries

--- a/leaderboards.html
+++ b/leaderboards.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
+        <link rel="stylesheet" href="./Styles/media-queries.css">
 </head>
 <body>
     <header>
@@ -48,7 +49,7 @@
 
             <!-- Top Page Button -->
             <a href="./settings.html" class="settings-button">Settings</a>
-            <p>Tip: Aim for Speed and Complexity! <br><br> Adjust your settings to higher difficulties and faster speeds to earn bonus points and rank higher on the leaderboard. Are you up for the challenge? Test your skills, and see how well <i style="color: blueviolet;">Do You Remember!</i></p>
+            <p class="tip-text">Tip:<i> Aim for Speed and Complexity!</i><br><br> Play on higher difficulties and faster speeds to earn bonus points and rank higher on the leaderboard... Ready for the challenge?</p>
         </div>
         
 
