--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
+        <link rel="stylesheet" href="./Styles/media-queries.css">
     </head>
 <body>
     <header>
@@ -26,7 +27,8 @@
         <div class="container-wrapper">
             <!-- Settings Header -->
             <h1>Game Settings</h1>
-            <p>Customize your experience through the game settings <strong style="color: #9500ff;">here!</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
+            <p>Here you can customize your experience through the game settings.</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
+            <p class="tip-text">Tip:<i> Faster speeds increase score multiplier!</i></p>
 
             <div class="settings-slider">
                 <!-- Game Speed -->
