--- a/game.html
+++ b/game.html
@@ -7,6 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
+        <link rel="stylesheet" href="./Styles/media-queries.css">
+
         <style>
             
             .pattern-button.active {
@@ -52,7 +54,7 @@
                     </select>
                 </h2>
                 <h1>Level: 1</h1>
-                <a href="./settings.html" class="cta-button" id="game-settings">Game Settings</a>
+                <a href="./settings.html" class="cta-game-button" id="game-settings">Game Settings</a>
             </div>
 
             <div class="game-container">
@@ -114,5 +116,6 @@
         </footer>
     </body>
     <script src="./Scripts/script.js"></script>
+    <script src="./Scripts/queryString.js"></script>
     <script src="./Scripts/difficulty-select.js"></script>
 </html>
