Update ReadMe. Styling changes (New font and adjusted media Queries)

--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,7 @@
                 <li><a href="./index.html#instructions-section">How To Play</a></li>
                 <li><a href="./index.html#difficulty-section">Difficulty</a></li>
                 <li><a href="./leaderboards.html">Leaderboard</a></li>
-                <li><a href="./settings.html">Settings</a></li>
+                <li><a href="./settings.html" style="color: white">Settings</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
             </div>
 
             <!-- Save Button -->
-            <button class="reset-button" id="save-settings">Save Settings</button>
+            <button class="reset-button" id="save-settings" style="color: white">Save Settings</button>
             <a href="./game.html" class="settings-button">Back to Game</a>
         </div>
     </section>
