--- a/index.html
+++ b/index.html
@@ -11,22 +11,72 @@
 
         <style>
 
+            .bg-image {
+                opacity: 60%;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: -1;
+            }
+
+            .global-overlay {
+                position: fixed; /* Ensures it spans the viewport */
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1; /* Keeps it behind all other content */
+                pointer-events: none; /* Prevents interactions */
+                overflow: hidden; /* Ensures no unintended overflow issues */
+            }
+            
+            .shadow-overlay {
+                box-shadow: inset 0px 0px 10000px 80px rgba(137, 43, 226, 0.72);
+                border-radius: 0%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: var(--background-color); /* Semi-transparent shadow */
+                z-index: 1; /* Sits above the image but below content */
+            }
+            
+            .content-overlay {
+                filter: brightness(80%);
+                position: absolute;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+            }
 
         </style>
     </head>
     <body>
+        <div class="global-overlay">
+            <div class="shadow-overlay"></div>
+            <img class="content-overlay" src="./Images/anime-8788530.jpg" alt="">
+        </div>
+
         <header>
             <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
-                    <li><a href="#title-section">Home</a></li>
-                    <li><a href="./index.html#instructions-section">How To Play</a></li>
-                    <li><a href="./index.html#difficulty-section">Difficulty</a></li>
+                    <li><a href="#title-section" style="color: white">Home</a></li>
+
                     <li><a href="./leaderboards.html">Leaderboard</a></li>
                     <li><a href="./settings.html">Settings</a></li>
                 </ul>
             </nav>
         </header>
+
+        <div>
+            <img class="bg-image" src="./Resources/pexels-felixmittermeier-957061.jpg" alt="background image">
+        </div>
 
         <section class="content-wrapper-home" id="title-section">
             <div class="container-wrapper-home">
@@ -36,7 +86,7 @@
                     The most challenging memory game, let’s see if you have what it takes to remember...
                 </p>
                 <div class="hero-buttons">
-                    <a class="cta-button" href="game.html">Quick Play</a>
+                    <a class="cta-button" href="game.html" style="color: white">Quick Play</a>
                     <a class="cta-button" href="#difficulty-section">Choose Difficulty</a>
                     <a class="cta-button" href="#instructions-section">How To Play</a>
                 </div>
