--- a/leaderboards.html
+++ b/leaderboards.html
@@ -17,7 +17,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./index.html#instructions-section">How To Play</a></li>
                 <li><a href="./index.html#difficulty-section">Difficulty</a></li>
-                <li><a href="./leaderboards.html">Leaderboard</a></li>
+                <li><a href="./leaderboards.html" style="color: white">Leaderboard</a></li>
                 <li><a href="./settings.html">Settings</a></li>
             </ul>
         </nav>
