--- a/game.html
+++ b/game.html
@@ -8,29 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
-
-        <style>
-            
-            .pattern-button.active {
-                opacity: 20%;
-            }
-
-            .medium{
-                gap: 0;
-                width: 150px;
-                height: 150px
-            }
-
-            .hard{
-                gap: 10px;
-                grid-template-columns: none;
-                width: 150px;
-                height: 150px;
-            }
-
-        </style>
+        <style></style>
     </head>
     <body>
+        <div class="global-overlay">
+            <div class="shadow-overlay"></div>
+            <img class="content-overlay" src="./Resources/pexels-felixmittermeier-957061.jpg" alt="">
+        </div>
+
         <header>
             <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
