--- a/index.html
+++ b/index.html
@@ -8,53 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
-
-        <style>
-
-            .bg-image {
-                opacity: 60%;
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: -1;
-            }
-
-            .global-overlay {
-                position: fixed; /* Ensures it spans the viewport */
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1; /* Keeps it behind all other content */
-                pointer-events: none; /* Prevents interactions */
-                overflow: hidden; /* Ensures no unintended overflow issues */
-            }
-            
-            .shadow-overlay {
-                box-shadow: inset 0px 0px 10000px 80px rgba(137, 43, 226, 0.72);
-                border-radius: 0%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: var(--background-color); /* Semi-transparent shadow */
-                z-index: 1; /* Sits above the image but below content */
-            }
-            
-            .content-overlay {
-                filter: brightness(80%);
-                position: absolute;
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-                z-index: -1;
-            }
-
-        </style>
+        <style></style>
     </head>
     <body>
         <div class="global-overlay">
