--- a/game.html
+++ b/game.html
@@ -20,11 +20,11 @@
             <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./index.html#instructions-section">How To Play</a></li>
-                    <li><a href="./index.html#difficulty-section">Difficulty</a></li>
-                    <li><a href="./leaderboards.html">Leaderboard</a></li>
-                    <li><a href="./settings.html">Settings</a></li>
+                    <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
+                    <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
+                    <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
+                    <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
+                    <li><a onmouseenter="clickSound()" href="./settings.html">Settings</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +39,7 @@
                     </select>
                 </h2>
                 <h1>Level: 1</h1>
-                <a href="./settings.html" class="cta-game-button" id="game-settings">Game Settings</a>
+                <a onmouseover="settingsSound()" href="./settings.html" class="cta-game-button" id="game-settings">Game Settings 🔧</a>
             </div>
 
             <div class="game-container">
@@ -80,7 +80,7 @@
             </div>
 
             <div class="controls">
-                <button class="cta-game-button" id="start-game">Start Game</button>
+                <button onmouseover="clickSound()" onclick="gameStart()" class="cta-game-button" id="start-game">Start Game 🚦</button>
                 <h2>Mulitplier: <span id="multiplier"></span></h2>
                 <div class="player-instructions">
                     <h1 id="endMessage"></h1>
@@ -103,4 +103,6 @@
     <script src="./Scripts/script.js"></script>
     <script src="./Scripts/queryString.js"></script>
     <script src="./Scripts/difficulty-select.js"></script>
+    <script src="./Scripts/gameSound.js"></script>
+
 </html>
