--- a/settings.html
+++ b/settings.html
@@ -14,32 +14,33 @@
         <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./index.html#instructions-section">How To Play</a></li>
-                <li><a href="./index.html#difficulty-section">Difficulty</a></li>
-                <li><a href="./leaderboards.html">Leaderboard</a></li>
+                <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
+                <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
+                <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
+                <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
                 <li><a href="./settings.html" style="color: white">Settings</a></li>
             </ul>
+            <audio src=""></audio>
         </nav>
     </header>
 
     <section class="content-wrapper settings-section">
         <div class="container-wrapper">
             <!-- Settings Header -->
-            <h1>Game Settings</h1>
+            <h1>Game Settings 🔧</h1>
             <p>Here you can customize your experience through the game settings.</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
             <p class="tip-text">Tip:<i> Faster speeds increase score multiplier!</i></p>
 
             <div class="settings-slider">
                 <!-- Game Speed -->
-                <label for="game-speed" style="color: #9500ff;">Game Speed</label>
-                <input type="range" id="game-speed" min="1" max="3" value="1">
+                <label for="game-speed" style="color: #9500ff;">Game Speed:</label>
+                <input onmouseover="caution()" onclick="speedScale()" type="range" id="game-speed" min="1" max="3" value="1">
                 <span id="speed-value">1.0x</span>
             </div>
 
             <!-- Save Button -->
-            <button class="reset-button" id="save-settings" style="color: white">Save Settings</button>
-            <a href="./game.html" class="settings-button">Back to Game</a>
+            <button onmouseover="saveSettingsBtn()" onclick="saveBtn()" class="reset-button" id="save-settings" style="color: white">Save Settings 💾</button>
+            <a onmouseover="selectSound()" href="./game.html" class="settings-button">Back to Game 🔙</a>
         </div>
     </section>
 
@@ -55,4 +56,5 @@
     </footer>
 </body>
 <script src="./Scripts/settings.js"></script>
+<script src="./Scripts/gameSound.js"></script>
 </html>
