--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </p>
                 <div class="hero-buttons">
                     <a onmouseover="selectSound()" class="cta-button" href="./game.html" style="color: white">Quick Game 🐇</a>
-                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#difficulty-section">Choose Difficulty 🚧</a>
-                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#instructions-section">How To Play 📄</a>
+                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#difficulty-section">Choose Difficulty 🎭</a>
+                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#instructions-section">How To Play 📜</a>
                 </div>
                 
             </div>
