--- a/settings.html
+++ b/settings.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
-                <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
-                <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
+                <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="./index.html#instructions-section">How To Play</a></li>
+                <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="./index.html#difficulty-section">Difficulty</a></li>
                 <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
                 <li><a href="./settings.html" style="color: white">Settings</a></li>
             </ul>
