--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
     <section class="content-wrapper settings-section">
         <div class="container-wrapper">
             <!-- Settings Header -->
-            <h1>Game Settings 🔧</h1>
+            <h1>Game Settings <span class="section-icon">🔧</span></h1>
             <p>Here you can customize your experience through the game settings.</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
             <p class="tip-text">Tip:<i> Faster speeds increase score multiplier!</i></p>
 
