Fix: Update audio clean up files

--- a/leaderboards.html
+++ b/leaderboards.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
-        Music from #Uppbeat (free for Creators!):
-        https://uppbeat.io/t/sulyya/imaginatarium
+        <!-- Music from #Uppbeat (free for Creators!):
+        https://uppbeat.io/t/sulyya/imaginatarium -->
 </head>
 <body>
     <header>
@@ -26,6 +26,7 @@
     </header>
 
     <section class="content-wrapper leaderboard-table">
+        <audio id="bg_audio" src="./Resources/Audio/main.mp3" autoplay loop></audio>
 
         <div class="container-wrapper">
                 <!-- Leaderboard Header -->
