--- a/settings.html
+++ b/settings.html
@@ -25,6 +25,7 @@
     </header>
 
     <section class="content-wrapper settings-section">
+        <audio id="bg_audio" src="./Resources/Audio/main.mp3" autoplay loop></audio>
         <div class="container-wrapper">
             <!-- Settings Header -->
             <h1>Game Settings 🔧</h1>
