FTR: update social links and select element

--- a/settings.html
+++ b/settings.html
@@ -39,7 +39,7 @@
             </div>
 
             <!-- Save Button -->
-            <button onmouseover="saveSettingsBtn()" onclick="saveBtn()" class="reset-button" id="save-settings" style="color: white">Save Settings 💾</button>
+            <button onmouseover="saveSettingsBtn()" onclick="saveBtn()" class="save-settings" id="save-settings" style="color: white">Save Settings 💾</button>
             <a onmouseover="selectSound()" href="./game.html" class="settings-button">Back to Game 🔙</a>
         </div>
     </section>
