--- a/game.html
+++ b/game.html
@@ -8,7 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
-        <style></style>
+        <style>
+            select {
+                
+            }
+
+        </style>
     </head>
     <body>
         <div class="global-overlay">
@@ -32,10 +37,10 @@
         <section class="content-wrapper-game">
             <div class="game-info-bar">
                 <h2>Difficulty:
-                    <select id="difficulty-select" onchange="changeDifficulty()">
-                        <option value="Easy" selected>Easy</option>
-                        <option value="Medium">Medium</option>
-                        <option value="Hard">Hard</option>
+                    <select id="difficulty-select" onchange="changeDifficulty()" onmouseenter="caution()" onclick="clickSound()" onchange="scrollEffect()">
+                        <option onclick="clickSound()" value="Easy" selected>Easy</option>
+                        <option onclick="clickSound()" value="Medium">Medium</option>
+                        <option onclick="clickSound()" value="Hard">Hard</option>
                     </select>
                 </h2>
                 <h1>Level: 1</h1>
@@ -91,12 +96,11 @@
             
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
-                <a href="https://www.twitter.com" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
+                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
                 <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
-                <a href="https://www.snapchat.com" target="_blank" rel="noopener"><img src="./Resources/Icons/snapchat.svg" alt="Snapchat"></a>
-                <a href="https://www.tiktok.com" target="_blank" rel="noopener"><img src="./Resources/Icons/tik-tok.svg" alt="Tik Tok"></a>
+                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
             </div>
         </footer>
     </body>
