--- a/leaderboards.html
+++ b/leaderboards.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
-        Music from #Uppbeat (free for Creators!):
-        https://uppbeat.io/t/sulyya/imaginatarium
+        <!-- Music from #Uppbeat (free for Creators!):
+        https://uppbeat.io/t/sulyya/imaginatarium -->
 </head>
 <body>
     <header>
